--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Penguin</title>
+    <style>
+        .bebas-neue{
+            font-family: "Bebas Neue", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+        }
+    </style>
 </head>
 <body>
+    <header class="bg-yellow-100 px-40 py-10">
+        <nav>
+            <div class="flex justify-between">
+                <div>
+                    <img class="w-56 h-8" src="./icons/logo.png" alt="">
+                </div>
+                <div>
+                    <a href="#">Home</a>
+                    <a href="#">Product</a>
+                    <a href="#">About us</a>
+                    <a href="#">Contact us</a>
+                </div>
+            </div>
+        </nav>
+        <!-- Banner -->
+        <div class="flex justify-between my-20 items-center ">
+            <div class="gap-5">
+                <h1 class="bebas-neue text-7xl"><span class="text-[#FABE4C]">Be the Penguins</span><br>
+                    of Winter</h1>
+                    <p class="bebas-neue text-lg">Lorem Ipsum is simply dummy text of the printing 
+                        and typesetting industry.</p>
+                        <Btn class="flex w-44 h-16 items-center justify-center  bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-[10px]">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                              </svg>
+                              Buy now</Btn>
+            </div>
+            <div>
+                <img src="./images/model.png" alt="">
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
