--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </header>
     <main>
         <!-- Cards woman -->
+        <h1 class="text-center text-[30px] font-bold">Women's Fashion</h1>
          <div class="grid grid-cols-1 lg:grid-cols-3 px-40 gap-x-12">
             <div class="space-y-[10px] py-6">
                 <div class="bg-slate-200 px-9 py-9 drop-shadow-2xl"><img src="./images/jacket-1.png"  alt=""></div>
@@ -81,6 +82,42 @@
                </div> 
                <div class="space-y-[10px] py-6">
                 <div class="bg-slate-200 px-9 py-9 drop-shadow-2xl"><img src="./images/jacket-3.png"  alt=""></div>
+                <h6 class="bebas-neue font-bold text-[25px]">Yellow Coat Jacket </h6>
+                <p class="leading-7 bebas-neue font-extralight opacity-70">Lorem Ipsum is simply dummy text of the 
+                    printing and typesetting industry.</p>
+                    <div class="flex items-center space-x-7"> <h2 class="text-yellow-600 text-[36px] font-bold">$234</h2>  <Btn class="flex w-44 h-16 items-center justify-center  bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-[10px] text-[#FFF] mt-5">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>
+                          Buy now</Btn></div>
+               </div> 
+         </div>
+        <h1 class="text-center text-[30px] font-bold">Men's Fashion</h1>
+         <div class="grid grid-cols-1 lg:grid-cols-3 px-40 gap-x-12">
+            <div class="space-y-[10px] py-6">
+                <div class="bg-slate-200 px-9 py-9 drop-shadow-2xl"><img src="./images/jacket-4.png"  alt=""></div>
+                <h6 class="bebas-neue font-bold text-[25px]">Yellow Coat Jacket </h6>
+                <p class="leading-7 bebas-neue font-extralight opacity-70">Lorem Ipsum is simply dummy text of the 
+                    printing and typesetting industry.</p>
+                    <div class="flex items-center space-x-7"> <h2 class="text-yellow-600 text-[36px] font-bold">$234</h2>  <Btn class="flex w-44 h-16 items-center justify-center  bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-[10px] text-[#FFF] mt-5">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>
+                          Buy now</Btn></div>
+               </div> 
+               <div class="space-y-[10px] py-6">
+                <div class="bg-slate-200 px-9 py-9 drop-shadow-2xl"><img src="./images/jacket-5.png" " alt=""></div>
+                <h6 class="bebas-neue font-bold text-[25px]">Yellow Coat Jacket </h6>
+                <p class="leading-7 bebas-neue font-extralight opacity-70">Lorem Ipsum is simply dummy text of the 
+                    printing and typesetting industry.</p>
+                    <div class="flex items-center space-x-7"> <h2 class="text-yellow-600 text-[36px] font-bold">$234</h2>  <Btn class="flex w-44 h-16 items-center justify-center  bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-[10px] text-[#FFF] mt-5">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                          </svg>
+                          Buy now</Btn></div>
+               </div> 
+               <div class="space-y-[10px] py-6">
+                <div class="bg-slate-200 px-9 py-9 drop-shadow-2xl"><img src="./images/jacket-6.png"  alt=""></div>
                 <h6 class="bebas-neue font-bold text-[25px]">Yellow Coat Jacket </h6>
                 <p class="leading-7 bebas-neue font-extralight opacity-70">Lorem Ipsum is simply dummy text of the 
                     printing and typesetting industry.</p>
